Tweak saved login handling.
- Add and fix function typing
- Improve saved logins table layout and fix translation key
- Make failed login handling more robust so that e.g. missing browscap doesn't confuse ChoiceAuth and Auth Manager.

--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -445,6 +445,12 @@ ul.list-group {
 }
 #login-dropdown
 #login-dropdown .dropdown-menu .account-menu { display: block; }
+.login-tokens-table {
+  margin-bottom: 0.5rem;
+  tbody > tr > td {
+    vertical-align: middle;
+  }
+}
 
 /* --- PubDateVis --- */
 .list-edit-container { @include clearfix(); }
