--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -87,10 +87,10 @@
   <?php $user = $this->auth()->isLoggedIn(); ?>
   <?php if ($this->auth()->getManager()->supportsPersistentLogin($user)): ?>
     <div class="myresearch-profile-header">
-      <h3><?=$this->transEsc('Saved logins')?></h3>
+      <h3><?=$this->transEsc('Saved Logins')?></h3>
     </div>
     <?php $tokens = $user->getLoginTokens($user->id); ?>
-    <?php if (count($tokens) === 0): ?>
+    <?php if (!$tokens): ?>
       <div class="my-profile-col"><?=$this->transEsc('No saved logins')?></div>
     <?php else: ?>
       <table class="login-tokens-table table table-responsive table-striped">
