Remove extraneous colon from table heading.

--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -97,7 +97,7 @@
         <thead>
           <tr>
             <th scope="col" class="login_token_browser"> <?=$this->transEsc('saved_login_platform_and_browser')?></th>
-            <th scope="col" class="login_token_last_login"><?=$this->transEsc('Last Login')?>:</th>
+            <th scope="col" class="login_token_last_login"><?=$this->transEsc('Last Login')?></th>
             <th scope="col" class="login_token_delete"><?=$this->transEsc('saved_login_actions')?></th>
           </tr>
         </thead>
