Tweak saved login handling. (#3371)
- Add and fix function typing
- Improve saved logins table layout and fix translation key
- Make failed login handling more robust so that e.g. missing browscap doesn't confuse ChoiceAuth and Auth Manager.
- Remove extraneous colon from table heading.

--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -87,17 +87,17 @@
   <?php $user = $this->auth()->isLoggedIn(); ?>
   <?php if ($this->auth()->getManager()->supportsPersistentLogin($user)): ?>
     <div class="myresearch-profile-header">
-      <h3><?=$this->transEsc('Saved logins')?></h3>
+      <h3><?=$this->transEsc('Saved Logins')?></h3>
     </div>
     <?php $tokens = $user->getLoginTokens($user->id); ?>
-    <?php if (count($tokens) === 0): ?>
+    <?php if (!$tokens): ?>
       <div class="my-profile-col"><?=$this->transEsc('No saved logins')?></div>
     <?php else: ?>
       <table class="login-tokens-table table table-responsive table-striped">
         <thead>
           <tr>
             <th scope="col" class="login_token_browser"> <?=$this->transEsc('saved_login_platform_and_browser')?></th>
-            <th scope="col" class="login_token_last_login"><?=$this->transEsc('Last Login')?>:</th>
+            <th scope="col" class="login_token_last_login"><?=$this->transEsc('Last Login')?></th>
             <th scope="col" class="login_token_delete"><?=$this->transEsc('saved_login_actions')?></th>
           </tr>
         </thead>
