--- a/themes/bootstrap3/scss/variables.scss
+++ b/themes/bootstrap3/scss/variables.scss
@@ -1,2 +1,7 @@
 // Cookie consent dialog should have a z-index low enough to stay below dropdowns and modals
 $zindex-cookie-consent: ($zindex-dropdown - 10);
+
+$pagination-border: transparent;
+$pagination-active-bg: $brand-primary;
+$pagination-active-border: $brand-primary;
+$pagination-disabled-border: transparent;
