Raise memory limit, fix type handling.

--- a/themes/bootstrap3/templates/admin/maintenance/home.phtml
+++ b/themes/bootstrap3/templates/admin/maintenance/home.phtml
@@ -36,7 +36,7 @@
       <option value="standard">standard</option>
       <option value="full">full</option>
       <option value="lite">lite</option>
-    </select> version.
+    </select> version (note: may use more memory than configured for PHP).
     <input type="submit" name="submit" value="<?=$this->transEscAttr('Submit')?>" class="btn btn-primary">
   </form>
 
