Fix first/last navigation.
Separates record page first/last navigation setting from backend support for first/last navigation by improved naming of the variable and method. Also adds flag about support for first/last navigation in results to the Options class so that it works properly with JS results and doesn't need to be set in a backend-specific template.

--- a/themes/bootstrap3/templates/search/pagination.phtml
+++ b/themes/bootstrap3/templates/search/pagination.phtml
@@ -12,7 +12,7 @@
     <ul<?=$ulAttrs?>>
       <?php if (isset($this->previous)): ?>
         <?php if (!isset($this->options['disableFirst']) || !$this->options['disableFirst']): ?>
-          <li role="none">
+          <li role="none" class="page-first">
             <a href="<?=$this->results->getUrlQuery()->setPage(1)?>" aria-label="<?=$this->transEscAttr('page_first')?>">[1]</a>
           </li>
         <?php endif; ?>
@@ -44,7 +44,7 @@
           </a>
         </li>
         <?php if (!isset($this->options['disableLast']) || !$this->options['disableLast']): ?>
-          <li role="none">
+          <li role="none" class="page-last">
             <a href="<?=$this->results->getUrlQuery()->setPage($this->pageCount)?>" aria-label="<?=$this->transEscAttr('page_last')?>">[<?=$this->pageCount?>]</a>
           </li>
         <?php endif; ?>
