Fix wrong file committed.

--- a/themes/bootstrap3/templates/search/pagination.phtml
+++ b/themes/bootstrap3/templates/search/pagination.phtml
@@ -1,3 +1,6 @@
+<?php
+  $firstLastSupported = $this->results->getOptions()->firstLastNavigationSupported();
+?>
 <?php if ($this->pageCount): ?>
   <nav aria-label="<?=$this->transEscAttr('pagination_label')?>">
     <?php
@@ -11,7 +14,7 @@
     ?>
     <ul<?=$ulAttrs?>>
       <?php if (isset($this->previous)): ?>
-        <?php if (!isset($this->options['disableFirst']) || !$this->options['disableFirst']): ?>
+        <?php if ($firstLastSupported): ?>
           <li role="none" class="page-first">
             <a href="<?=$this->results->getUrlQuery()->setPage(1)?>" aria-label="<?=$this->transEscAttr('page_first')?>">[1]</a>
           </li>
@@ -43,7 +46,7 @@
             <?=$this->icon('page-next') ?>
           </a>
         </li>
-        <?php if (!isset($this->options['disableLast']) || !$this->options['disableLast']): ?>
+        <?php if ($firstLastSupported): ?>
           <li role="none" class="page-last">
             <a href="<?=$this->results->getUrlQuery()->setPage($this->pageCount)?>" aria-label="<?=$this->transEscAttr('page_last')?>">[<?=$this->pageCount?>]</a>
           </li>
