--- a/themes/sandal/scss/sandal.scss
+++ b/themes/sandal/scss/sandal.scss
@@ -263,3 +263,8 @@ a:hover .login-dropdown-caret {
     .exclude { order: 2; }
   }
 }
+
+/* --- Pagination --- */
+.pagination {
+  justify-content: center;
+}
