Add pagination-top class also to the enclosing top pagination nav to avoid them getting mixed.

--- a/themes/bootstrap3/templates/search/pagination.phtml
+++ b/themes/bootstrap3/templates/search/pagination.phtml
@@ -5,11 +5,15 @@
     if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
       $navAttrs->add('class', 'js-pagination');
     }
+    $className = $this->options['className'] ?? '';
+    if ($className) {
+      $navAttrs->add('class', $className);
+    }
   ?>
   <nav<?=$navAttrs?>>
     <?php
       $ulAttrs = $this->htmlAttributes(['class' => 'pagination']);
-      if ($className = $this->options['className'] ?? '') {
+      if ($className) {
         $ulAttrs->add('class', $className);
       }
     ?>
