--- a/themes/bootstrap3/templates/search/pagination.phtml
+++ b/themes/bootstrap3/templates/search/pagination.phtml
@@ -4,16 +4,18 @@
     $navAttrs = $this->htmlAttributes(['aria-label' => $this->translate('pagination_label')]);
     if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
       $navAttrs->add('class', 'js-pagination');
-    }
-    $className = $this->options['className'] ?? '';
-    if ($className) {
-      $navAttrs->add('class', $className);
+      if ($this->top) {
+        $navAttrs->add('class', 'js-pagination__top');
+      }
     }
   ?>
   <nav<?=$navAttrs?>>
     <?php
       $ulAttrs = $this->htmlAttributes(['class' => 'pagination']);
-      if ($className) {
+      if ($this->top) {
+        $ulAttrs->add('class', 'pagination-top');
+      }
+      if ($className = $this->options['className'] ?? '') {
         $ulAttrs->add('class', $className);
       }
     ?>
