--- a/themes/bootstrap3/templates/search/pagination.phtml
+++ b/themes/bootstrap3/templates/search/pagination.phtml
@@ -1,15 +1,22 @@
 <?php if ($this->pageCount): ?>
   <?php
     $showFirstLast = $this->pageCount > 3 && $this->results->getOptions()->firstLastNavigationSupported();
+    $navAttrs = $this->htmlAttributes(['aria-label' => $this->translate('pagination_label')]);
+    if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
+      $navAttrs->add('class', 'js-pagination');
+      if ($this->top) {
+        $navAttrs->add('class', 'js-pagination__top');
+      }
+    }
   ?>
-  <nav aria-label="<?=$this->transEscAttr('pagination_label')?>">
+  <nav<?=$navAttrs?>>
     <?php
       $ulAttrs = $this->htmlAttributes(['class' => 'pagination']);
+      if ($this->top) {
+        $ulAttrs->add('class', 'pagination-top');
+      }
       if ($className = $this->options['className'] ?? '') {
         $ulAttrs->add('class', $className);
-      }
-      if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
-        $ulAttrs->add('class', 'js-pagination');
       }
     ?>
     <ul<?=$ulAttrs?>>
