--- a/themes/bootstrap3/templates/Helpers/pagination-item.phtml
+++ b/themes/bootstrap3/templates/Helpers/pagination-item.phtml
@@ -1,19 +1,19 @@
 <?php
   $classes = array_merge(['page-item'], $this->liClasses ?? []);
-  if (null !== $this->page && ($this->currentActive || $this->page != $this->current)) {
-    $newParams = $this->params;
-    $newParams['page'] = $this->page;
-    $href = $this->escapeHtmlAttr($this->currentPath() . '?' . http_build_query($newParams));
-    if ($this->page == $this->current) {
-        $classes[] = 'active';
-    }
-  } else {
-    $href = '#';
-    $classes[] = 'disabled';
+  $aAttrs = $this->htmlAttributes([
+    'class' => 'page-link',
+    'aria-label' => $this->label,
+  ]);
+  $newParams = $this->params;
+  $newParams['page'] = $this->page;
+  $aAttrs['href'] = $this->currentPath() . '?' . http_build_query($newParams);
+  if ($this->page === $this->current) {
+    $classes[] = 'active';
+    $aAttrs['aria-current'] = 'page';
   }
 ?>
 <li class="<?=implode(' ', $classes)?>">
-  <a class="page-link" href="<?=$href?>" aria-label="<?=$this->escapeHtmlAttr($this->label)?>">
+  <a<?=$aAttrs?>>
     <?=$contentHtml?>
   </a>
 </li>
