Move to a single pagination-item template.

--- a/themes/bootstrap3/templates/Helpers/pagination-item.phtml
+++ b/themes/bootstrap3/templates/Helpers/pagination-item.phtml
@@ -5,7 +5,9 @@
   $aAttrs = $this->htmlAttributes([
     'class' => 'page-link',
     'aria-label' => $this->label,
-    'href' => $this->currentPath() . '?' . http_build_query(array_merge($this->params, ['page' => $this->page])),
+    'href' => null !== $this->results
+      ? $this->results->getUrlQuery()->setPage($this->page)->getParams(false)
+      : $this->currentPath() . '?' . http_build_query(array_merge($this->params, ['page' => $this->page])),
   ]);
   if ($this->page === $this->current) {
     $liAttrs->add('class', 'active');
